--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,42 @@
 <html lang="en">
 
 <head>
-  <title>DUHacks</title>
+  <title>CoAfina</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  <meta name="author" content="DUHacks">
+  <meta name="author" content="CoAfina">
   <meta name="description"
-    content="Join us on 16-17th July 2022 with over 500 students for 36 hours of creation, innovation, & fun." />
-  <meta itemprop="name" content="DUHacks">
-  <meta property="og:title" content="DUHacks 2022" />
+    content=" ¡Anímense a proponer y resolver retos científicos y educativos con datos abiertos!" />
+  <meta itemprop="name" content="CoAfina">
+  <meta property="og:title" content="CoAfina 2025" />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@duhacks" />
-  <meta name="twitter:creator" content="@duhacks" />
+  <meta name="twitter:site" content="@CoAfina" />
+  <meta name="twitter:creator" content="@CoAfina" />
   <meta property="og:url" content="https://vashisht.co/duhacks/" />
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="851" />
   <meta property="og:image:height" content="315" />
-  <meta property="og:image:alt" content="DUHacks" />
+  <meta property="og:image:alt" content="CoAfina" />
   <!-- <script defer async src="https://apply.devfolio.co/v2/sdk.js"></script> -->
-  <meta property="og:image" content="https://user-images.githubusercontent.com/76911582/171133278-0eac7d43-fca2-43fa-b90a-e8907ce346c3.png" width="16" height="60" />
+  <meta property="og:image" content="logo.png" width="16" height="60" />
   <meta property="og:image:secure_url"
-    content="https://user-images.githubusercontent.com/76911582/171133278-0eac7d43-fca2-43fa-b90a-e8907ce346c3.png" />
+    content="logo.png" />
   <meta name="twitter:image"
-    content="https://user-images.githubusercontent.com/76911582/171133278-0eac7d43-fca2-43fa-b90a-e8907ce346c3.png" />
+    content="logo.png" />
   <meta property="og:description"
-    content="Join us on 16-17th July 2022 with over 500 students for 36 hours of creation, innovation, & fun." />
-
+    content=" ¡Anímense a proponer y resolver retos científicos y educativos con datos abiertos!" />
   <link rel="icon" type="image/png"
-    href="https://user-images.githubusercontent.com/76911582/171133278-0eac7d43-fca2-43fa-b90a-e8907ce346c3.png">
+    href="logo.png">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
   <link rel="stylesheet" href="./index.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/fe697e6552.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  <title>DUHacks</title>
+  <title>CoAfina</title>
 </head>
 
 <body onload="removeLoader()" class="day-mode">
