--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,14 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <meta name="author" content="CoAfina">
   <meta name="description"
-    content=" ¡Anímense a proponer y resolver retos científicos y educativos con datos abiertos!" />
+    content="¡Convirtamos datos abiertos en soluciones brillantes! Anímense a proponer y resolver retos científicos y educativos que transformen realidades." />
   <meta itemprop="name" content="CoAfina">
   <meta property="og:title" content="CoAfina 2025" />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@CoAfina" />
   <meta name="twitter:creator" content="@CoAfina" />
-  <meta property="og:url" content="https://vashisht.co/duhacks/" />
+  <meta property="og:url" content="https://laconga.redclara.net/hackathon/" />
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="851" />
   <meta property="og:image:height" content="315" />
@@ -27,7 +27,7 @@
   <meta name="twitter:image"
     content="logo.png" />
   <meta property="og:description"
-    content=" ¡Anímense a proponer y resolver retos científicos y educativos con datos abiertos!" />
+    content="¡Convirtamos datos abiertos en soluciones brillantes! Anímense a proponer y resolver retos científicos y educativos que transformen realidades." />
   <link rel="icon" type="image/png"
     href="logo.png">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
